# chromadb-company-sec-filings

./: .gitignore  README.md  pyproject.toml  requirements.txt  sec_filings_db.py
examples/: example.py
